Added ddg (duckduckgo) utility to bin
ddg is a command-line interface for duckduckgo, and can be found on
github: https://github.com/justinls/ddg .

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "vim/bundle/ctrlp"]
 	path = vim/bundle/ctrlp
 	url = git://github.com/kien/ctrlp.vim.git
+[submodule "bin/ddg_data"]
+	path = bin/ddg_data
+	url = git://github.com/justinls/ddg.git
