Adds high-resolution icons for uzbl
Support for the ~/.icons directory has been added. An svg icon and
prerendered png icon formed from the logo on the ubzl Wikipedia page has
been added. The desktop files have been updated accordingly to map to
these new icon files.

--- a/local/share/applications/uzbl-tabbed.desktop
+++ b/local/share/applications/uzbl-tabbed.desktop
@@ -3,5 +3,5 @@
 Name=Uzbl Tabbed
 Exec=uzbl-tabbed
 Type=Application
-Icon=/usr/share/uzbl/examples/data/uzbl.png
+Icon=uzbl
 Comment=Web interface tools which adhere to the unix philosophy
