--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+*.svg binary
 *.deb filter=lfs diff=lfs merge=lfs -text
 *.ttf filter=lfs diff=lfs merge=lfs -text
 *.otf filter=lfs diff=lfs merge=lfs -text
