--- a/local/share/applications/uzbl.desktop
+++ b/local/share/applications/uzbl.desktop
@@ -3,5 +3,5 @@
 Name=Uzbl
 Exec=uzbl
 Type=Application
-Icon=/usr/share/uzbl/examples/data/uzbl.png
+Icon=uzbl
 Comment=Web interface tools which adhere to the unix philosophy
