--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 *.svg binary
+vim/bundle/uzbl binary
 *.deb filter=lfs diff=lfs merge=lfs -text
 *.ttf filter=lfs diff=lfs merge=lfs -text
 *.otf filter=lfs diff=lfs merge=lfs -text
