Adds tmux-powerline configuration
This may be switched over to the new powerline beta soon.
<https://github.com/Lokaltog/powerline>.

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "vim/bundle/pandoc"]
 	path = vim/bundle/pandoc
 	url = git://github.com/PiPeep/vim-pandoc.git
+[submodule "tmux/powerline"]
+	path = tmux/powerline
+	url = git://github.com/erikw/tmux-powerline.git
