--- a/tmux.conf
+++ b/tmux.conf
@@ -1,13 +1,24 @@
+# General Settings
 set -g default-terminal "screen-256color"      # colors, colors, colors!
-set -g status-bg colour237                     # darkish grey
-set -g status-fg colour252                     # slightly greyish white
-set-option -g mouse-select-pane on             # yeah, I know...
-set -g status-left "#[bg=colour233]#H [#S] #[bg=default] "
-set -g status-left-length 25
-set -g status-right "#[bg=colour233]  #(date '+%I:%M %p  %d-%b-%y')"
-setw -g window-status-current-bg colour238
-setw -g window-status-current-fg white
+set -g mouse-select-pane on                    # yeah, I know...
+set -g status on                               # Show the status line
+set -g status-utf8 on
+set -g status-interval 5                       # Updates every 2 seconds
+
+# Keybindings
 set -g prefix C-a                              # use screen's ctrl+a binding
 unbind-key C-b
-bind-key a send-prefix
-bind-key b set-window-option synchronize-panes # send keystrokes to all panes
+unbind-key b
+bind-key a send-prefix                         # 'ctrl+a a' should send 'ctrl+a'
+bind-key s setw synchronize-panes
+
+# Tmux Powerline
+set -g status-justify "left"
+set -g status-left-length 90
+set -g status-right-length 90
+set -g status-left "#(~/.tmux/powerline/powerline.sh left)"
+set -g status-right "#(~/.tmux/powerline/powerline.sh right)"
+set -g status-fg "colour244"
+set -g status-bg "colour235"
+setw -g window-status-format "#I ⮁ #W"
+setw -g window-status-current-format "#[fg=colour235, bg=colour27]⮀#[fg=colour255, bg=colour27] #I ⮁ #W #[fg=colour27, bg=colour235]⮀"
