Installs new vim powerline beta

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "vim/bundle/pandoc"]
 	path = vim/bundle/pandoc
 	url = git://github.com/PiPeep/vim-pandoc.git
+[submodule "config/pipeep-common/powerline"]
+	path = config/pipeep-common/powerline
+	url = git://github.com/Lokaltog/powerline.git
