--- a/tmux.conf
+++ b/tmux.conf
@@ -11,6 +11,21 @@ unbind-key C-b
 unbind-key b
 bind-key a send-prefix                         # 'ctrl+a a' should send 'ctrl+a'
 bind-key s setw synchronize-panes
+# Navigate between panes
+bind-key -r k select-pane -U
+bind-key -r j select-pane -D
+bind-key -r h select-pane -L
+bind-key -r l select-pane -R
+# Resize Panes
+bind-key -r C-k resize-pane -U
+bind-key -r C-j resize-pane -D
+bind-key -r C-h resize-pane -L
+bind-key -r C-l resize-pane -R
+# Resize Panes Quickly
+bind-key -r M-k resize-pane -U 5
+bind-key -r M-j resize-pane -D 5
+bind-key -r M-h resize-pane -L 5
+bind-key -r M-l resize-pane -R 5
 
 # Tmux Powerline
 set -g status-justify "left"
