Remap tmux sync and choose-tree bindings

--- a/tmux.conf
+++ b/tmux.conf
@@ -10,7 +10,8 @@ set -g prefix C-a                              # use screen's ctrl+a binding
 unbind-key C-b
 unbind-key b
 bind-key a send-prefix                         # 'ctrl+a a' should send 'ctrl+a'
-bind-key s setw synchronize-panes
+bind-key y setw synchronize-panes
+bind-key s choose-tree
 # Navigate between panes
 bind-key -r k select-pane -U
 bind-key -r j select-pane -D
