Ungreenify the tmux pane separators
They're now shades of grey to match the new tmux-powerline setup.

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,6 +4,8 @@ set -g mouse-select-pane on                    # yeah, I know...
 set -g status on                               # Show the status line
 set -g status-utf8 on
 set -g status-interval 5                       # Updates every 2 seconds
+set -g pane-active-border-fg "colour245"       # light-grey
+set -g pane-border-fg "colour235"              # dark-grey
 
 # Keybindings
 set -g prefix C-a                              # use screen's ctrl+a binding
