--- a/tmux.conf
+++ b/tmux.conf
@@ -3,7 +3,7 @@ set -g default-terminal "screen-256color"      # colors, colors, colors!
 set -g mouse-select-pane on                    # yeah, I know...
 set -g status on                               # Show the status line
 set -g status-utf8 on
-set -g status-interval 5                       # Updates every 2 seconds
+set -g status-interval 1                       # Updates every second
 set -g pane-active-border-fg "colour245"       # light-grey
 set -g pane-border-fg "colour235"              # dark-grey
 
