--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "tmux/powerline"]
 	path = tmux/powerline
 	url = git://github.com/erikw/tmux-powerline.git
+[submodule "vim/bundle/sudo"]
+	path = vim/bundle/sudo
+	url = git://github.com/vim-scripts/sudo.vim.git
