Renumber tmux windows when they get closed
This makes sure that there aren't any gaps in the numbering.

--- a/tmux.conf
+++ b/tmux.conf
@@ -6,6 +6,8 @@ set -g status-utf8 on
 set -g status-interval 1                       # Updates every second
 set -g pane-active-border-fg "colour245"       # light-grey
 set -g pane-border-fg "colour235"              # dark-grey
+set -g renumber-windows on                     # Useful when closing windows
+set -g base-index 1                            # Start counting windows at 1
 
 # Keybindings
 set -g prefix C-a                              # use screen's ctrl+a binding
