--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "vim/bundle/localvimrc"]
 	path = vim/bundle/localvimrc
 	url = git://github.com/MarcWeber/vim-addon-local-vimrc.git
+[submodule "vim/bundle/hasksyn"]
+	path = vim/bundle/hasksyn
+	url = git://github.com/travitch/hasksyn.git
