Syntax highlighting for RPAL
RPAL is a programming language used in COP5555: Programming Language
Principles at the University of Florida. This commit adds the syntax
highlighting plugin for vim that I wrote for RPAL.

--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "vim/bundle/hasksyn"]
 	path = vim/bundle/hasksyn
 	url = git://github.com/travitch/hasksyn.git
+[submodule "vim/bundle/rpal"]
+	path = vim/bundle/rpal
+	url = git://github.com/PiPeep/vim-rpal.git
