Move to the new powerline in tmux
The new powerline (Lokaltog/powerline) was originally broken in tmux for
me. This has since been fixed.

This is a pretty stock setup, except with a bunch of segments removed
that I don't care about.

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,7 +3,7 @@ set -g default-terminal "screen-256color"      # colors, colors, colors!
 set -g mouse-select-pane on                    # yeah, I know...
 set -g status on                               # Show the status line
 set -g status-utf8 on
-set -g status-interval 1                       # Updates every second
+set -g status-interval 2                       # Updates every other second
 set -g pane-active-border-fg "colour245"       # light-grey
 set -g pane-border-fg "colour235"              # dark-grey
 set -g renumber-windows on                     # Useful when closing windows
@@ -32,13 +32,12 @@ bind-key -r M-j resize-pane -D 5
 bind-key -r M-h resize-pane -L 5
 bind-key -r M-l resize-pane -R 5
 
-# Tmux Powerline
-set -g status-justify "left"
-set -g status-left-length 90
-set -g status-right-length 90
-set -g status-left "#(~/.tmux/powerline/powerline.sh left)"
-set -g status-right "#(~/.tmux/powerline/powerline.sh right)"
-set -g status-fg "colour244"
-set -g status-bg "colour235"
-setw -g window-status-format " #I  #W"
-setw -g window-status-current-format "#[fg=colour235, bg=colour27]#[fg=colour255, bg=colour27] #I  #W #[fg=colour27, bg=colour235]"
+# Powerline
+set -g status-fg colour231
+set -g status-bg colour234
+set -g status-left-length 20
+set -g status-left '#[fg=colour16,bg=colour254,bold] #S #[fg=colour254,bg=colour234,nobold]#(~/config/pipeep-common/powerline/scripts/powerline tmux left)'
+set -g status-right '#(~/.config/pipeep-common/powerline/scripts/powerline tmux right)'
+set -g status-right-length 150
+set -g window-status-format "#[fg=colour244,bg=colour234]#I #[fg=colour240] #[fg=colour249]#W "
+set -g window-status-current-format "#[fg=colour234,bg=colour31]#[fg=colour117,bg=colour31] #I  #[fg=colour231,bold]#W #[fg=colour31,bg=colour234,nobold]"
