--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "zsh/bundle/bashmarks"]
 	path = zsh/bundle/bashmarks
 	url = git://github.com/huyng/bashmarks.git
+[submodule "vim/bundle/sensible"]
+	path = vim/bundle/sensible
+	url = git://github.com/tpope/vim-sensible.git
