[vim] Add support for `.editorconfig` files
The EditorConfig file format is a cross-editor configuration format for
software projects. Basic options like indentation depth can be set by
placing a `.editorconfig` file in the project's root.

--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "vim/bundle/jade"]
 	path = vim/bundle/jade
 	url = git@github.com:digitaltoad/vim-jade.git
+[submodule "vim/bundle/editorconfig"]
+	path = vim/bundle/editorconfig
+	url = git@github.com:editorconfig/editorconfig-vim.git
