[tmux] Use current directory when opening new pane

--- a/tmux.conf
+++ b/tmux.conf
@@ -32,6 +32,11 @@ bind-key -r M-j resize-pane -D 5
 bind-key -r M-h resize-pane -L 5
 bind-key -r M-l resize-pane -R 5
 
+# Try to use the current pane's directory when opening a new pane/window
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
+
 # Powerline
 set -g status-fg colour231
 set -g status-bg colour234
