[vim] Add tagbar plugin
Tagbar uses exuberant-ctags to draw a tree of symbol definitions.

--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule "vim/bundle/pandoc-legacy"]
 	path = vim/bundle/pandoc-legacy
 	url = git://github.com/vim-pandoc/vim-pandoc-legacy.git
+[submodule "vim/bundle/tagbar"]
+	path = vim/bundle/tagbar
+	url = git@github.com:majutsushi/tagbar.git
