[vim] Change remote URI for vim-tagbar
This fixes `git submodule init` on machines without a valid ssh key for
github.

--- a/.gitmodules
+++ b/.gitmodules
@@ -63,4 +63,4 @@
 	url = git://github.com/vim-pandoc/vim-pandoc-legacy.git
 [submodule "vim/bundle/tagbar"]
 	path = vim/bundle/tagbar
-	url = git@github.com:majutsushi/tagbar.git
+	url = git://github.com/majutsushi/tagbar.git
