[zsh] Oh my Zsh!
- Migrate to oh-my-zsh!

  I evaluated prezto too, but oh-my-zsh seemed a bit more easily
  customizable.

  This includes a custom prompt that's fork of an existing oh-my-zsh
  theme, with virtualenv support and simpler code.

- Remove bashmarks in favor of autojump (install from apt for now).

- Use and switch to the base16 color scheme suite, allowing a consistant
  and easily changed scheme between vim and zsh. Using 256-color mode
  for now, pending chriskempson/base16-builder.

--- a/.gitmodules
+++ b/.gitmodules
@@ -34,9 +34,6 @@
 [submodule "vim/bundle/rpal"]
 	path = vim/bundle/rpal
 	url = git://github.com/PiPeep/vim-rpal.git
-[submodule "zsh/bundle/bashmarks"]
-	path = zsh/bundle/bashmarks
-	url = git://github.com/huyng/bashmarks.git
 [submodule "vim/bundle/sensible"]
 	path = vim/bundle/sensible
 	url = git://github.com/tpope/vim-sensible.git
@@ -64,3 +61,15 @@
 [submodule "vim/bundle/tagbar"]
 	path = vim/bundle/tagbar
 	url = git://github.com/majutsushi/tagbar.git
+[submodule "zsh/bundle/oh-my-zsh"]
+	path = zsh/bundle/oh-my-zsh
+	url = git://github.com/robbyrussell/oh-my-zsh.git
+[submodule "config/base16/gnome-terminal"]
+	path = config/base16/gnome-terminal
+	url = git://github.com/chriskempson/base16-gnome-terminal.git
+[submodule "config/base16/shell"]
+	path = config/base16/shell
+	url = git://github.com/chriskempson/base16-shell.git
+[submodule "vim/bundle/base16"]
+	path = vim/bundle/base16
+	url = git://github.com/chriskempson/base16-vim.git
