--- a/tmux.conf
+++ b/tmux.conf
@@ -38,11 +38,6 @@ bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
 # Powerline
-set -g status-fg colour231
-set -g status-bg colour234
-set -g status-left-length 20
-set -g status-left '#[fg=colour16,bg=colour254,bold] #S #[fg=colour254,bg=colour234,nobold]#(~/config/pipeep-common/powerline/scripts/powerline tmux left)'
-set -g status-right '#(~/.config/pipeep-common/powerline/scripts/powerline tmux right)'
-set -g status-right-length 150
-set -g window-status-format "#[fg=colour244,bg=colour234]#I #[fg=colour240] #[fg=colour249]#W "
-set -g window-status-current-format "#[fg=colour234,bg=colour31]#[fg=colour117,bg=colour31] #I  #[fg=colour231,bold]#W #[fg=colour31,bg=colour234,nobold]"
+source ~/.config/pipeep-common/powerline/powerline/bindings/tmux/powerline.conf
+source ~/.config/pipeep-common/powerline/powerline/bindings/tmux/powerline_tmux_1.8_plus.conf
+source ~/.config/pipeep-common/powerline/powerline/bindings/tmux/powerline_tmux_1.9_plus.conf
