[powerline] Fix powerline bugs from last update
Powerline changed how the tmux binding worked and updated the config
files.

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
 # General Settings
-set -g default-terminal "screen-256color"      # colors, colors, colors!
+set -g default-terminal "screen-256color-italic" # colors, colors, colors!
 set -g mouse-select-pane on                    # yeah, I know...
 set -g status on                               # Show the status line
 set -g status-utf8 on
@@ -38,6 +38,7 @@ bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
 # Powerline
-source ~/.config/pipeep-common/powerline/powerline/bindings/tmux/powerline.conf
-source ~/.config/pipeep-common/powerline/powerline/bindings/tmux/powerline_tmux_1.8_plus.conf
-source ~/.config/pipeep-common/powerline/powerline/bindings/tmux/powerline_tmux_1.9_plus.conf
+run-shell "~/.config/pipeep-common/powerline/scripts/powerline-config tmux setup"
+#source ~/.config/pipeep-common/powerline/powerline/bindings/tmux/powerline.conf
+#source ~/.config/pipeep-common/powerline/powerline/bindings/tmux/powerline_tmux_1.8_plus.conf
+#source ~/.config/pipeep-common/powerline/powerline/bindings/tmux/powerline_tmux_1.9_plus.conf
