[tmux] Increase tmux scrollback

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,7 @@ set -g pane-active-border-fg "colour245"       # light-grey
 set -g pane-border-fg "colour235"              # dark-grey
 set -g renumber-windows on                     # Useful when closing windows
 set -g base-index 1                            # Start counting windows at 1
+set -g history-limit 10000                     # scrollback, default was 2000
 
 # Keybindings
 set -g prefix C-a                              # use screen's ctrl+a binding
