--- a/.gitmodules
+++ b/.gitmodules
@@ -82,9 +82,6 @@
 [submodule "vim/bundle/salt"]
 	path = vim/bundle/salt
 	url = git://github.com/saltstack/salt-vim.git
-[submodule "vim/bundle/javascript"]
-	path = vim/bundle/javascript
-	url = git://github.com/pangloss/vim-javascript.git
 [submodule "vim/bundle/jsx"]
 	path = vim/bundle/jsx
 	url = git://github.com/mxw/vim-jsx.git
@@ -94,3 +91,6 @@
 [submodule "vim/bundle/ctrlp-py-matcher"]
 	path = vim/bundle/ctrlp-py-matcher
 	url = git://github.com/FelikZ/ctrlp-py-matcher.git
+[submodule "vim/bundle/yajs"]
+	path = vim/bundle/yajs
+	url = git://github.com/othree/yajs.vim.git
