[terminfo] Rename *-256color-italic to *-256color
This overwrites the existing terminfo entry, which is hacky, and not how
it's supposed to work, but far too many programs seem to inspect $TERM,
and freak out when the value isn't in their database. Plus, all sorts of
issues are created when $TERM is passed through to ssh, mosh, sudo, etc.

So overwriting the normal *-256color files seems to actually be the
least hacky approach.

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
 # General Settings
-set -g default-terminal "screen-256color-italic" # colors, colors, colors!
+set -g default-terminal "screen-256color"      # colors, colors, colors!
 set -g mouse-select-pane on                    # yeah, I know...
 set -g status on                               # Show the status line
 set -g status-utf8 on
