--- a/.gitmodules
+++ b/.gitmodules
@@ -94,3 +94,6 @@
 [submodule "vim/bundle/yajs"]
 	path = vim/bundle/yajs
 	url = git://github.com/othree/yajs.vim.git
+[submodule "vim/bundle/javascript-indent"]
+	path = vim/bundle/javascript-indent
+	url = git://github.com/rschmukler/pangloss-vim-indent.git
