[vim] Replace yajs with vim-javascript
I'm hoping for better JSX and flow interoperability. Some quick testing
seems to show this is the case, but I'll see at work on Monday.

--- a/.gitmodules
+++ b/.gitmodules
@@ -97,3 +97,6 @@
 [submodule "vim/bundle/javascript-indent"]
 	path = vim/bundle/javascript-indent
 	url = git://github.com/rschmukler/pangloss-vim-indent.git
+[submodule "vim/bundle/javascript"]
+	path = vim/bundle/javascript
+	url = git://github.com/pangloss/vim-javascript.git
