--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,7 @@
 # General Settings
 set -g default-terminal "screen-256color"      # colors, colors, colors!
-set -g mouse-select-pane on                    # yeah, I know...
+set -g mouse on                                # yeah, I know...
 set -g status on                               # Show the status line
-set -g status-utf8 on
 set -g status-interval 2                       # Updates every other second
 set -g pane-active-border-fg "colour245"       # light-grey
 set -g pane-border-fg "colour235"              # dark-grey
