[vim] Add ALE (Asynchronous Lint Engine)
Currently disabled by default until I'm more comfortable with it.

--- a/.gitmodules
+++ b/.gitmodules
@@ -106,3 +106,6 @@
 [submodule "vim/bundle/airline-themes"]
 	path = vim/bundle/airline-themes
 	url = git://github.com/vim-airline/vim-airline-themes.git
+[submodule "vim/bundle/ale"]
+	path = vim/bundle/ale
+	url = git://github.com/w0rp/ale.git
