[tmux] Change tmux title option to use pane title
It's a longer, more descriptive title.

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,7 +9,7 @@ set -g renumber-windows on                     # Useful when closing windows
 set -g base-index 1                            # Start counting windows at 1
 set -g history-limit 10000                     # scrollback, default was 2000
 set -g set-titles on                           # set the terminal window title
-set -g set-titles-string "[#S] #W"             # format the title
+set -g set-titles-string "[#S] #T"             # format the title
 
 # Keybindings
 set -g prefix C-a                              # use screen's ctrl+a binding
