--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
 # General Settings
-set -g default-terminal "xterm-256color"       # colors, colors, colors!
+set -g default-terminal "screen-256color"      # colors, colors, colors!
 set -g mouse on                                # yeah, I know...
 set -g status on                               # Show the status line
 set -g status-interval 2                       # Updates every other second
