--- a/tmux.conf
+++ b/tmux.conf
@@ -3,8 +3,8 @@ set -g default-terminal "screen-256color"      # colors, colors, colors!
 set -g mouse on                                # yeah, I know...
 set -g status on                               # Show the status line
 set -g status-interval 2                       # Updates every other second
-set -g pane-active-border-fg "colour245"       # light-grey
-set -g pane-border-fg "colour235"              # dark-grey
+set -g pane-active-border-style fg=colour245   # light-grey
+set -g pane-border-style fg=colour235          # dark-grey
 set -g renumber-windows on                     # Useful when closing windows
 set -g base-index 1                            # Start counting windows at 1
 set -g history-limit 10000                     # scrollback, default was 2000
