--- a/tmux.conf
+++ b/tmux.conf
@@ -10,6 +10,7 @@ set -g base-index 1                            # Start counting windows at 1
 set -g history-limit 10000                     # scrollback, default was 2000
 set -g set-titles on                           # set the terminal window title
 set -g set-titles-string "[#S] #T"             # format the title
+set-option -sg escape-time 10                  # make ESC faster in nvim
 
 # Keybindings
 set -g prefix C-a                              # use screen's ctrl+a binding
