[tmux] Enable focus events and truecolor, extend history limit

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,16 +1,18 @@
 # General Settings
-set -g default-terminal "screen-256color"      # colors, colors, colors!
-set -g mouse on                                # yeah, I know...
-set -g status on                               # Show the status line
+set -g default-terminal "screen-256color"
+set -sa terminal-overrides ',xterm-256color:RGB'
+set -g mouse on
+set -g focus-events on
+set -g status on
 set -g status-interval 2                       # Updates every other second
 set -g pane-active-border-style fg=colour245   # light-grey
 set -g pane-border-style fg=colour235          # dark-grey
 set -g renumber-windows on                     # Useful when closing windows
 set -g base-index 1                            # Start counting windows at 1
-set -g history-limit 10000                     # scrollback, default was 2000
+set -g history-limit 100000                    # scrollback, default was 2000
 set -g set-titles on                           # set the terminal window title
 set -g set-titles-string "[#S] #T"             # format the title
-set-option -sg escape-time 10                  # make ESC faster in nvim
+set -sg escape-time 10                         # make ESC faster in nvim
 
 # Keybindings
 set -g prefix C-a                              # use screen's ctrl+a binding
