[tmux] Replace Lokaltog/powerline with tmux-powerline

--- a/tmux.conf
+++ b/tmux.conf
@@ -43,7 +43,8 @@ bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
 # Powerline
-run-shell "~/.config/pipeep-common/powerline/scripts/powerline-config tmux setup"
-#source ~/.config/pipeep-common/powerline/powerline/bindings/tmux/powerline.conf
-#source ~/.config/pipeep-common/powerline/powerline/bindings/tmux/powerline_tmux_1.8_plus.conf
-#source ~/.config/pipeep-common/powerline/powerline/bindings/tmux/powerline_tmux_1.9_plus.conf
+set-option -g status-left-length 60
+set-option -g status-right-length 90
+set-option -g status-left "#(~/.config/bgw-common/tmux-powerline/powerline.sh left)"
+set-option -g status-right "#(~/.config/bgw-common/tmux-powerline/powerline.sh right)"
+set-hook -g session-created 'run-shell "~/.config/bgw-common/tmux-powerline/powerline.sh init"'
