--- a/.gitmodules
+++ b/.gitmodules
@@ -13,9 +13,6 @@
 [submodule "bin/ddg_data"]
 	path = bin/ddg_data
 	url = https://github.com/justinls/ddg.git
-[submodule "config/pipeep-common/powerline"]
-	path = config/pipeep-common/powerline
-	url = https://github.com/Lokaltog/powerline.git
 [submodule "vim/bundle/sudo"]
 	path = vim/pack/plugins/start/sudo
 	url = https://github.com/vim-scripts/sudo.vim.git
@@ -97,3 +94,6 @@
 [submodule "config/nvim/pack/plugins/start/nvim-lspconfig"]
 	path = config/nvim/pack/plugins/start/nvim-lspconfig
 	url = https://github.com/neovim/nvim-lspconfig.git
+[submodule "config/bgw-common/tmux-powerline"]
+	path = config/bgw-common/tmux-powerline
+	url = https://github.com/erikw/tmux-powerline.git
