--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
 # General Settings
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
 set -sa terminal-overrides ',xterm-256color:RGB'
 set -g mouse on
 set -g focus-events on
